--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
     <description>cucumber-integration</description>
     <properties>
         <java.version>21</java.version>
-        <junit.jupiter.version>5.9.2</junit.jupiter.version>
-        <junit.platform.version>1.9.2</junit.platform.version>
-        <cucumber.version>7.10.1</cucumber.version>
+        <junit.jupiter.version>5.10.2</junit.jupiter.version>
+        <junit.platform.version>1.10.2</junit.platform.version>
+        <cucumber.version>7.15.0</cucumber.version>
         <maven.surefire.version>3.0.0-M8</maven.surefire.version>
     </properties>
     <dependencies>
@@ -45,6 +45,17 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
